# GameEngineFromZero

./: CMakeLists.txt  HelloEngine.cpp
Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp
Platform/: CMakeLists.txt
Platform/Linux/: CMakeLists.txt
Platform/Linux/XCB/: CMakeLists.txt  helloengine_linux_xcb.c
Platform/Windows/: CMakeLists.txt  helloengine_win.c
Platform/Windows/Direct X/: CMakeLists.txt  helloengine_win_d2d.cpp
Platform/Windows/GDI/: CMakeLists.txt  helloengine_win_gdi.cpp
